<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2015-2019 Skymind, Inc.
  ~
  ~ This program and the accompanying materials are made available under the
  ~ terms of the Apache License, Version 2.0 which is available at
  ~ https://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations
  ~ under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <string name="app_name">IrisClassifier</string>
    <string name="classify_iris">CLASSIFY IRIS</string>
    <string name="petal_length">Petal Length</string>
    <string name="petal_width">Petal Width</string>
    <string name="sepal_length">Sepal Length</string>
    <string name="sepal_width">Sepal Width</string>
    <string name="setosa">I. setosa</string>
    <string name="versicolor">I. versicolor</string>
    <string name="virginica">I. virginica</string>
    <string name="OO">00</string>

</resources>
